--- a/src/index.css
+++ b/src/index.css
@@ -23,4 +23,9 @@ body {
     max-width: 1440px;
     margin: 0 auto;
   }
+  
+  .main-button {
+    @apply font-primary bg-accent py-4 px-10 rounded-full text-slate-100 shadow-lg hover:shadow-xl transition-transform transform hover:scale-105 hover:bg-light-accent active:bg-extra-light-accent
+  }
+  
 }
