--- a/src/index.css
+++ b/src/index.css
@@ -27,5 +27,17 @@ body {
   .main-button {
     @apply font-primary bg-accent py-4 px-10 rounded-full text-slate-100 shadow-lg hover:shadow-xl transition-transform transform hover:scale-105 hover:bg-light-accent active:bg-extra-light-accent
   }
+
+  .goupstyle {
+    animation-name: goup;
+    animation-duration: 2s;
+    animation-iteration-count: 1;
+    animation-direction: reverse;
+    animation-timing-function: ease-out;
+  }
+
+  @keyframes goup {
+    100% {transform: translate(0px,30px);}
+  }
   
 }
