--- a/src/index.css
+++ b/src/index.css
@@ -28,16 +28,9 @@ body {
     @apply font-primary bg-accent py-4 px-10 rounded-full text-slate-100 shadow-lg hover:shadow-xl transition-transform transform hover:scale-105 hover:bg-light-accent active:bg-extra-light-accent
   }
 
-  .goupstyle {
-    animation-name: goup;
-    animation-duration: 2s;
-    animation-iteration-count: 1;
-    animation-direction: reverse;
-    animation-timing-function: ease-out;
+  .filter-container {
+    @apply flex justify-between w-48 text-white text-lg mb-6 bg-gray-400 font-primary px-3 py-1 rounded-sm sm:w-80
   }
 
-  @keyframes goup {
-    100% {transform: translate(0px,30px);}
-  }
   
 }
