--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=League+Spartan:wght@100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=League+Spartan:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=League+Spartan:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=League+Spartan:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -14,7 +14,7 @@
 }
 
 body {
-  background-color: #FFF8F0;
+  background-color: #fff8f0;
   min-height: 100vh;
 }
 
@@ -23,14 +23,12 @@ body {
     max-width: 1440px;
     margin: 0 auto;
   }
-  
+
   .main-button {
-    @apply font-primary bg-accent py-4 px-10 rounded-full text-slate-100 shadow-lg hover:shadow-xl transition-transform transform hover:scale-105 hover:bg-light-accent active:bg-extra-light-accent
+    @apply font-primary bg-accent py-4 px-10 rounded-full text-slate-100 shadow-lg hover:shadow-xl transition-transform transform hover:scale-105 hover:bg-light-accent active:bg-extra-light-accent;
   }
 
-  .filter-container {
-    @apply flex justify-between w-48 text-white text-lg mb-6 bg-gray-400 font-primary px-3 py-1 rounded-sm sm:w-80
+  .category-container {
+    @apply flex justify-between w-48 text-lg mb-6  font-primary px-3 py-1 rounded-sm sm:w-80 border-black border-2 font-bold cursor-pointer hover:border-none hover:px-[14px] hover:py-[6px] hover:shadow-md hover:bg-white/90;
   }
-
-  
 }
