--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,11 @@ body {
   }
 
   .main-button {
-    @apply font-primary bg-accent py-4 px-10 rounded-full text-slate-100 shadow-lg hover:shadow-xl transition-transform transform hover:scale-105 hover:bg-light-accent active:bg-extra-light-accent;
+    @apply font-primary bg-accent py-4 px-10 rounded-full text-slate-100 shadow-lg;
+  }
+
+  .main-button-hover {
+    @apply hover:bg-light-accent active:bg-extra-light-accent hover:scale-105 hover:shadow-xl transition-transform transform;
   }
 
   .category-container {
